; ModuleID = '/home/carl/AnghaBench/systemd/src/basic/extr_time-util.c_mktime_or_timegm.c'
source_filename = "/home/carl/AnghaBench/systemd/src/basic/extr_time-util.c_mktime_or_timegm.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tm = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mktime_or_timegm(%struct.tm* %0, i32 %1) #0 {
  %3 = alloca %struct.tm*, align 8
  %4 = alloca i32, align 4
  store %struct.tm* %0, %struct.tm** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %7, label %10

7:                                                ; preds = %2
  %8 = load %struct.tm*, %struct.tm** %3, align 8
  %9 = call i32 @timegm(%struct.tm* %8)
  br label %13

10:                                               ; preds = %2
  %11 = load %struct.tm*, %struct.tm** %3, align 8
  %12 = call i32 @mktime(%struct.tm* %11)
  br label %13

13:                                               ; preds = %10, %7
  %14 = phi i32 [ %9, %7 ], [ %12, %10 ]
  ret i32 %14
}

declare dso_local i32 @timegm(%struct.tm*) #1

declare dso_local i32 @mktime(%struct.tm*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
